2009-07-27  Nick Clifton  <nickc@redhat.com>

	* (po/fi.po): Updated Finnish translation.

2009-07-25  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.tgt (targ64_extra_emuls): Add elf_l1om if elf_x86_64
	is supported.  Add elf_l1om_fbsd if elf_x86_64_fbsd is supported.
	(targ_extra_emuls): Likewise.

	* Makefile.am (ALL_64_EMULATIONS): Add eelf_l1om.o and
	eelf_l1om_fbsd.o
	(eelf_l1om.c): New.
	(eelf_l1om_fbsd.c): Likewise.
	* Makefile.in: Regenerated.

	* emulparams/elf_l1om.sh: New.
	* emulparams/elf_l1om_fbsd.sh: Likewise.

2009-07-23  Ulrich Drepper  <drepper@redhat.com>

	* NEWS: Mention the linker's support for symbols with a binding of
	STB_GNU_UNIQUE.

2009-07-22  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/10429
	* ldlang.c (insert_os_after): Tie assignments to non-alloc
	output sections if there is no-input section.

2009-07-11  Alan Modra  <amodra@bigpond.net.au>

	* ldlang.c (insert_os_after): Don't tie assignments to non-alloc
	output sections.

2009-07-10  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc32elf.em (ppc_before_allocation): Turn on
	linker relaxation if it might be necessary.

2009-07-10  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf32ppc.sh (GOTPLT, PLT): Handle .iplt.

2009-07-06  Matthias Klose <doko@ubuntu.com>

	* ld.texinfo: Fix typo.

2009-07-03  Tristan Gingold  <gingold@adacore.com>

	* scripttempl/pep.sc: Put .eh_frame in its own section.
	* scripttempl/pe.sc: Ditto.
	
2009-06-26  Kai Tietz  <kai.tietz@onevision.com>

	* scripttempl/pe.sc (.debug_pubtypes): Added section rule.
	* scripttempl/pep.sc: Likewise.

2009-06-25  Tristan Gingold  <gingold@adacore.com>

	* ldlang.c (print_input_section): Add is_discarded parameter.  Adjust
	prototype.
	(lang_map): Print the size of discarded sections.
	(print_statement): Adjust call to print_input_section.

2009-06-18  Dave Korn  <dave.korn.cygwin@gmail.com>

	Merge cegcc and mingw32ce target name changes from CeGCC project:
